Make RocksDB run git submodule init and update if rocksdb is not fetched

--- a/storage/rocksdb/CMakeLists.txt
+++ b/storage/rocksdb/CMakeLists.txt
@@ -1,5 +1,10 @@
 # TODO: Copyrights
-
+IF(NOT EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/rocksdb/Makefile AND GIT_EXECUTABLE)
+  EXECUTE_PROCESS(COMMAND "${GIT_EXECUTABLE}" submodule init
+                  WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")
+  EXECUTE_PROCESS(COMMAND "${GIT_EXECUTABLE}" submodule update
+                  WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")
+ENDIF()
 
 IF (NOT EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/rocksdb/Makefile")
   MESSAGE(SEND_ERROR "Missing Makefile in rocksdb directory. Try \"git submodule update\".")
